-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.7.0
-
None
-
02e11c6cd7570af2ef21d0f6cb559cc181a5bcdc
Can't say anymore what I've done exactly, probably switching a Kit.
(gdb) bt
#0 0x00007fb8b4dde425 in __GI_raise (sig=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#1 0x00007fb8b4de1b8b in __GI_abort () at abort.c:91
#2 0x00007fb8b5959978 in qt_message_fatal (context=..., message=...) at global/qlogging.cpp:868
#3 0x00007fb8b5957aea in QMessageLogger::fatal (this=0x7fffcc4017c0, msg=0x7fb8b5c15bd8 "ASSERT: \"%s\" in file %s, line %d")
at global/qlogging.cpp:356
#4 0x00007fb8b59531ec in qt_assert (assertion=0x7fb89f0c9aac "uint(i) < uint(size())",
file=0x7fb89f0c9a78 "/home/nikolai/usr/qt-5.0.1/include/QtCore/qstring.h", line=729) at global/qglobal.cpp:1951
#5 0x00007fb89f02d767 in QString::at (this=0x7fffcc401860, i=-1) at /home/nikolai/usr/qt-5.0.1/include/QtCore/qstring.h:729
#6 0x00007fb89f02c962 in QMakeGlobals::setDirectories (this=0x37701d0, input_dir=..., output_dir=...)
at /home/nikolai/dev/creator/qtcreator-cron/src/shared/proparser/qmakeglobals.cpp:241
#7 0x00007fb89d9e20f9 in Qt4ProjectManager::Qt4Project::createProFileReader (this=0x91dca60, qt4ProFileNode=0x91dd2a0, bc=0x6314570)
at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/qt4projectmanager/qt4project.cpp:964
#8 0x00007fb89d9fb77e in Qt4ProjectManager::Qt4ProFileNode::setupReader (this=0x91dd2a0)
at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/qt4projectmanager/qt4nodes.cpp:1612
#9 0x00007fb89d9fb623 in Qt4ProjectManager::Qt4ProFileNode::asyncUpdate (this=0x91dd2a0)
at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/qt4projectmanager/qt4nodes.cpp:1593
#10 0x00007fb89d9e1502 in Qt4ProjectManager::Qt4Project::asyncUpdate (this=0x91dca60)
at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/qt4projectmanager/qt4project.cpp:838
#11 0x00007fb89da9f8fe in Qt4ProjectManager::Qt4Project::qt_static_metacall (_o=0x91dca60, _c=QMetaObject::InvokeMetaMethod, _id=6,
_a=0x7fffcc401be0) at .moc/debug-shared/moc_qt4project.cpp:106
#12 0x00007fb8b5b85d9d in QMetaObject::activate (sender=0x91dcac0, signalOffset=3, local_signal_index=0, argv=0x0)
at kernel/qobject.cpp:3441
#13 0x00007fb8b5b8557c in QMetaObject::activate (sender=0x91dcac0, m=0x7fb8b60077a0 <QTimer::staticMetaObject>, local_signal_index=0,
argv=0x0) at kernel/qobject.cpp:3316
#14 0x00007fb8b5c111ef in QTimer::timeout (this=0x91dcac0) at .moc/debug-shared/moc_qtimer.cpp:189
#15 0x00007fb8b5b90ba9 in QTimer::timerEvent (this=0x91dcac0, e=0x7fffcc4023a0) at kernel/qtimer.cpp:250
#16 0x00007fb8b5b7f33c in QObject::event (this=0x91dcac0, e=0x7fffcc4023a0) at kernel/qobject.cpp:1051
#17 0x00007fb8b6c21bbe in QApplicationPrivate::notify_helper (this=0x209c450, receiver=0x91dcac0, e=0x7fffcc4023a0)
at kernel/qapplication.cpp:3394
#18 0x00007fb8b6c1f053 in QApplication::notify (this=0x7fffcc402d50, receiver=0x91dcac0, e=0x7fffcc4023a0)
at kernel/qapplication.cpp:2825
#19 0x00007fb8b5b45056 in QCoreApplication::notifyInternal (this=0x7fffcc402d50, receiver=0x91dcac0, event=0x7fffcc4023a0)
at kernel/qcoreapplication.cpp:767
#20 0x00007fb8b5b488eb in QCoreApplication::sendEvent (receiver=0x91dcac0, event=0x7fffcc4023a0) at kernel/qcoreapplication.h:203
#21 0x00007fb8b5bb586b in QTimerInfoList::activateTimers (this=0x20b1060) at kernel/qtimerinfo_unix.cpp:644
#22 0x00007fb8b5bb6a6a in timerSourceDispatch (source=0x20b1000) at kernel/qeventdispatcher_glib.cpp:185
#23 0x00007fb8b467bab5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#24 0x00007fb8b467bde8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007fb8b467bea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007fb8b5bb74bb in QEventDispatcherGlib::processEvents (this=0x20aea40, flags=...) at kernel/qeventdispatcher_glib.cpp:425
---Type <return> to continue, or q <return> to quit---
#27 0x00007fb8ae246d12 in QPAEventDispatcherGlib::processEvents (this=0x20aea40, flags=...)
at eventdispatchers/qeventdispatcher_glib.cpp:123
#28 0x00007fb8b5b42021 in QEventLoop::processEvents (this=0x7fffcc402650, flags=...) at kernel/qeventloop.cpp:136
#29 0x00007fb8b5b422eb in QEventLoop::exec (this=0x7fffcc402650, flags=...) at kernel/qeventloop.cpp:212
#30 0x00007fb8b5b45707 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1020
#31 0x00007fb8b60f32be in QGuiApplication::exec () at kernel/qguiapplication.cpp:1191
#32 0x00007fb8b6c1eb83 in QApplication::exec () at kernel/qapplication.cpp:2669
#33 0x000000000040d41d in main (argc=1, argv=0x7fffcc402ed8) at /home/nikolai/dev/creator/qtcreator-cron/src/app/main.cpp:516
(gdb) bt full
#0 0x00007fb8b4dde425 in __GI_raise (sig=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
resultvar = 0
pid = <optimized out>
selftid = 20529
#1 0x00007fb8b4de1b8b in __GI_abort () at abort.c:91
save_stage = 2
act = {__sigaction_handler = {sa_handler = 0x7fffcc401570, sa_sigaction = 0x7fffcc401570}, sa_mask = {__val = {140431297137924,
140431284956232, 140431330256096, 140736620139920, 140431297137181, 140431288832416, 140736620139968, 4294967295,
140431297189790, 140431296780928, 4294967295, 7586288, 0, 0, 34279424, 140431296614400}}, sa_flags = -1217579132,
sa_restorer = 0x5}
sigs = {__val = {32, 0 <repeats 15 times>}}
#2 0x00007fb8b5959978 in qt_message_fatal (context=..., message=...) at global/qlogging.cpp:868
No locals.
#3 0x00007fb8b5957aea in QMessageLogger::fatal (this=0x7fffcc4017c0, msg=0x7fb8b5c15bd8 "ASSERT: \"%s\" in file %s, line %d")
at global/qlogging.cpp:356
message = {static null = {<No data fields>}, d = 0x3db1110}
ap = {{gp_offset = 40, fp_offset = 48, overflow_arg_area = 0x7fffcc4017a0, reg_save_area = 0x7fffcc4016e0}}
#4 0x00007fb8b59531ec in qt_assert (assertion=0x7fb89f0c9aac "uint(i) < uint(size())",
file=0x7fb89f0c9a78 "/home/nikolai/usr/qt-5.0.1/include/QtCore/qstring.h", line=729) at global/qglobal.cpp:1951
__PRETTY_FUNCTION__ = "void qt_assert(const char*, const char*, int)"
#5 0x00007fb89f02d767 in QString::at (this=0x7fffcc401860, i=-1) at /home/nikolai/usr/qt-5.0.1/include/QtCore/qstring.h:729
No locals.
#6 0x00007fb89f02c962 in QMakeGlobals::setDirectories (this=0x37701d0, input_dir=..., output_dir=...)
at /home/nikolai/dev/creator/qtcreator-cron/src/shared/proparser/qmakeglobals.cpp:241
srcpath = {static null = {<No data fields>}, d = 0x3aa5920}
dstLen = 58
dstpath = {static null = {<No data fields>}, d = 0x7b01440}
srcLen = -1
lastSl = 1
#7 0x00007fb89d9e20f9 in Qt4ProjectManager::Qt4Project::createProFileReader (this=0x91dca60, qt4ProFileNode=0x91dd2a0, bc=0x6314570)
at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/qt4projectmanager/qt4project.cpp:964
k = 0x2eb84d0
env = {m_values = {d = 0x47984b0}}
qtVersion = 0x2ea4b90
eend = {i = 0x6cc4400b4}
qmakeArgs = {<QList<QString>> = {{p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0,
array = {0x0}}, d = 0x865a9b0}, d = 0x865a9b0}}, <No data fields>}
systemRoot = {static null = {<No data fields>}, d = 0x7fb8b5c19580 <QArrayData::shared_null>}
eit = {i = 0x7fb8b6003e30 <vtable for QEvent+16>}
reader = 0x91dca60
---Type <return> to continue, or q <return> to quit---
#8 0x00007fb89d9fb77e in Qt4ProjectManager::Qt4ProFileNode::setupReader (this=0x91dd2a0)
at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/qt4projectmanager/qt4nodes.cpp:1612
No locals.
#9 0x00007fb89d9fb623 in Qt4ProjectManager::Qt4ProFileNode::asyncUpdate (this=0x91dd2a0)
at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/qt4projectmanager/qt4nodes.cpp:1593
future = {d = {<QFutureInterfaceBase> = {_vptr.QFutureInterfaceBase = 0x8b400b4, d = 0xffffffffffffffff}, <No data fields>}}
#10 0x00007fb89d9e1502 in Qt4ProjectManager::Qt4Project::asyncUpdate (this=0x91dca60)
at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/qt4projectmanager/qt4project.cpp:838
__PRETTY_FUNCTION__ = "void Qt4ProjectManager::Qt4Project::asyncUpdate()"
progressManager = 0x213bd00
#11 0x00007fb89da9f8fe in Qt4ProjectManager::Qt4Project::qt_static_metacall (_o=0x91dca60, _c=QMetaObject::InvokeMetaMethod, _id=6,
_a=0x7fffcc401be0) at .moc/debug-shared/moc_qt4project.cpp:106
_t = 0x91dca60
#12 0x00007fb8b5b85d9d in QMetaObject::activate (sender=0x91dcac0, signalOffset=3, local_signal_index=0, argv=0x0)
at kernel/qobject.cpp:3441
receiverInSameThread = true
sw = {receiver = 0x91dca60, previousSender = 0x0, currentSender = {sender = 0x91dcac0, signal = 3, ref = 1}, switched = true}
callFunction = 0x7fb89da9f7f8 <Qt4ProjectManager::Qt4Project::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>
receiver = 0x91dca60
method_relative = 6
c = 0x6289f30
last = 0x6289f30
locker = {val = 140431304209456}
connectionLists = {connectionLists = 0x91dcf50}
list = 0x91dcfc8
signal_index = 3
empty_argv = {0x0}
currentThreadId = 0x7fb8b78d5780
__PRETTY_FUNCTION__ = "static void QMetaObject::activate(QObject*, int, int, void**)"
#13 0x00007fb8b5b8557c in QMetaObject::activate (sender=0x91dcac0, m=0x7fb8b60077a0 <QTimer::staticMetaObject>, local_signal_index=0,
argv=0x0) at kernel/qobject.cpp:3316
No locals.
#14 0x00007fb8b5c111ef in QTimer::timeout (this=0x91dcac0) at .moc/debug-shared/moc_qtimer.cpp:189
No locals.
#15 0x00007fb8b5b90ba9 in QTimer::timerEvent (this=0x91dcac0, e=0x7fffcc4023a0) at kernel/qtimer.cpp:250
No locals.
#16 0x00007fb8b5b7f33c in QObject::event (this=0x91dcac0, e=0x7fffcc4023a0) at kernel/qobject.cpp:1051
No locals.
#17 0x00007fb8b6c21bbe in QApplicationPrivate::notify_helper (this=0x209c450, receiver=0x91dcac0, e=0x7fffcc4023a0)
at kernel/qapplication.cpp:3394
---Type <return> to continue, or q <return> to quit---
consumed = false
#18 0x00007fb8b6c1f053 in QApplication::notify (this=0x7fffcc402d50, receiver=0x91dcac0, e=0x7fffcc4023a0)
at kernel/qapplication.cpp:2825
d = 0x209c450
__PRETTY_FUNCTION__ = "virtual bool QApplication::notify(QObject*, QEvent*)"
res = false
#19 0x00007fb8b5b45056 in QCoreApplication::notifyInternal (this=0x7fffcc402d50, receiver=0x91dcac0, event=0x7fffcc4023a0)
at kernel/qcoreapplication.cpp:767
threadData = 0x209c5c0
loopLevelCounter = {threadData = 0x209c5c0}
result = false
cbdata = {0x91dcac0, 0x7fffcc4023a0, 0x7fffcc4022bf}
d = 0x91dcd10
#20 0x00007fb8b5b488eb in QCoreApplication::sendEvent (receiver=0x91dcac0, event=0x7fffcc4023a0) at kernel/qcoreapplication.h:203
No locals.
#21 0x00007fb8b5bb586b in QTimerInfoList::activateTimers (this=0x20b1060) at kernel/qtimerinfo_unix.cpp:644
e = {<QEvent> = {_vptr.QEvent = 0x7fb8b6003e10 <vtable for QTimerEvent+16>, static staticMetaObject = {d = {superdata = 0x0,
stringdata = 0x7fb8b5d22f40 <qt_meta_stringdata_QEvent>, data = 0x7fb8b5d248a0 <qt_meta_data_QEvent>,
static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}, d = 0x0, t = 1, posted = 0, spont = 0,
m_accept = 1, reserved = 5838}, id = 53}
currentTimerInfo = 0x0
n_act = 1
maxCount = 2
currentTime = {tv_sec = 10569, tv_usec = 1505}
#22 0x00007fb8b5bb6a6a in timerSourceDispatch (source=0x20b1000) at kernel/qeventdispatcher_glib.cpp:185
timerSource = 0x20b1000
#23 0x00007fb8b467bab5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
No symbol table info available.
#24 0x00007fb8b467bde8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
No symbol table info available.
#25 0x00007fb8b467bea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
No symbol table info available.
#26 0x00007fb8b5bb74bb in QEventDispatcherGlib::processEvents (this=0x20aea40, flags=...) at kernel/qeventdispatcher_glib.cpp:425
d = 0x20aea60
canWait = true
savedFlags = {i = 0}
result = false
#27 0x00007fb8ae246d12 in QPAEventDispatcherGlib::processEvents (this=0x20aea40, flags=...)
at eventdispatchers/qeventdispatcher_glib.cpp:123
No locals.
---Type <return> to continue, or q <return> to quit---
#28 0x00007fb8b5b42021 in QEventLoop::processEvents (this=0x7fffcc402650, flags=...) at kernel/qeventloop.cpp:136
d = 0x308cdb0
#29 0x00007fb8b5b422eb in QEventLoop::exec (this=0x7fffcc402650, flags=...) at kernel/qeventloop.cpp:212
locker = {val = 34195136}
__PRETTY_FUNCTION__ = "int QEventLoop::exec(QEventLoop::ProcessEventsFlags)"
ref = {d = 0x308cdb0, locker = @0x7fffcc4025d0, exceptionCaught = true}
app = 0x7fffcc402d50
d = 0x308cdb0
#30 0x00007fb8b5b45707 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1020
threadData = 0x209c5c0
__PRETTY_FUNCTION__ = "static int QCoreApplication::exec()"
eventLoop = {<QObject> = {_vptr.QObject = 0x7fb8b6007450 <vtable for QEventLoop+16>, static staticMetaObject = {d = {
superdata = 0x0, stringdata = 0x7fb8b5cc0c80 <qt_meta_stringdata_QObject>,
data = 0x7fb8b5cc0da0 <qt_meta_data_QObject>,
static_metacall = 0x7fb8b5b883da <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>,
relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x308cdb0}, static staticQtMetaObject = {d = {
superdata = 0x0, stringdata = 0x7fb8b5d0d660 <qt_meta_stringdata_Qt>, data = 0x7fb8b5d16ea0 <qt_meta_data_Qt>,
static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {
superdata = 0x7fb8b6003f60 <QObject::staticMetaObject>, stringdata = 0x7fb8b5d22b80 <qt_meta_stringdata_QEventLoop>,
data = 0x7fb8b5d22be0 <qt_meta_data_QEventLoop>,
static_metacall = 0x7fb8b5c10590 <QEventLoop::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>,
relatedMetaObjects = 0x0, extradata = 0x0}}}
returnCode = 0
#31 0x00007fb8b60f32be in QGuiApplication::exec () at kernel/qguiapplication.cpp:1191
No locals.
#32 0x00007fb8b6c1eb83 in QApplication::exec () at kernel/qapplication.cpp:2669
No locals.
#33 0x000000000040d41d in main (argc=1, argv=0x7fffcc402ed8) at /home/nikolai/dev/creator/qtcreator-cron/src/app/main.cpp:516
arguments = {<QList<QString>> = {{p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0,
array = {0x0}}, d = 0x20eba60}, d = 0x20eba60}}, <No data fields>}
creatorTrPath = @0x7fffcc402840: {static null = {<No data fields>}, d = 0x20ff590}
globalSettings = 0x20ee230
uiLanguages = {<QList<QString>> = {{p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0,
array = {0x0}}, d = 0x20e9e90}, d = 0x20e9e90}}, <No data fields>}
r = 0
qtTranslator = {<QObject> = {_vptr.QObject = 0x7fb8b60078d0 <vtable for QTranslator+16>, static staticMetaObject = {d = {
superdata = 0x0, stringdata = 0x7fb8b5cc0c80 <qt_meta_stringdata_QObject>,
data = 0x7fb8b5cc0da0 <qt_meta_data_QObject>,
static_metacall = 0x7fb8b5b883da <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>,
relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x20ee910}, static staticQtMetaObject = {d = {
---Type <return> to continue, or q <return> to quit---
superdata = 0x0, stringdata = 0x7fb8b5d0d660 <qt_meta_stringdata_Qt>, data = 0x7fb8b5d16ea0 <qt_meta_data_Qt>,
static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {
superdata = 0x7fb8b6003f60 <QObject::staticMetaObject>, stringdata = 0x7fb8b5d25440 <qt_meta_stringdata_QTranslator>,
data = 0x7fb8b5d25480 <qt_meta_data_QTranslator>,
static_metacall = 0x7fb8b5c11298 <QTranslator::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>,
relatedMetaObjects = 0x0, extradata = 0x0}}}
proxyUrl = {d = 0x20ef360}
foundAppOptions = {d = 0x7fb8b5c54ee0 <QMapDataBase::shared_null>}
plugins = {{p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}},
d = 0x21220c0}, d = 0x21220c0}}
coreplugin = 0x20f6cf0
threadCount = 12
settingsPath = {static null = {<No data fields>}, d = 0x7fb8b5c19580 <QArrayData::shared_null>}
it = {c = 0x7fffcc402770, i = {i = 0x20eba78}, n = {i = 0x20eba70}}
settings = 0x20ebbd0
translator = {<QObject> = {_vptr.QObject = 0x7fb8b60078d0 <vtable for QTranslator+16>, static staticMetaObject = {d = {
superdata = 0x0, stringdata = 0x7fb8b5cc0c80 <qt_meta_stringdata_QObject>,
data = 0x7fb8b5cc0da0 <qt_meta_data_QObject>,
static_metacall = 0x7fb8b5b883da <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>,
relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x20ee840}, static staticQtMetaObject = {d = {
superdata = 0x0, stringdata = 0x7fb8b5d0d660 <qt_meta_stringdata_Qt>, data = 0x7fb8b5d16ea0 <qt_meta_data_Qt>,
static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {
superdata = 0x7fb8b6003f60 <QObject::staticMetaObject>, stringdata = 0x7fb8b5d25440 <qt_meta_stringdata_QTranslator>,
data = 0x7fb8b5d25480 <qt_meta_data_QTranslator>,
static_metacall = 0x7fb8b5c11298 <QTranslator::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>,
relatedMetaObjects = 0x0, extradata = 0x0}}}
pid = -1
app = {<QApplication> = {<QGuiApplication> = {<QCoreApplication> = {<QObject> = {
_vptr.QObject = 0x617bf0 <vtable for SharedTools::QtSingleApplication+16>, static staticMetaObject = {d = {
superdata = 0x0, stringdata = 0x7fb8b5cc0c80 <qt_meta_stringdata_QObject>,
data = 0x7fb8b5cc0da0 <qt_meta_data_QObject>,
static_metacall = 0x7fb8b5b883da <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>,
relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x209c450}, static staticQtMetaObject = {d = {
superdata = 0x0, stringdata = 0x7fb8b5d0d660 <qt_meta_stringdata_Qt>, data = 0x7fb8b5d16ea0 <qt_meta_data_Qt>,
static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {
superdata = 0x7fb8b6003f60 <QObject::staticMetaObject>,
stringdata = 0x7fb8b5d22ce0 <qt_meta_stringdata_QCoreApplication>,
data = 0x7fb8b5d22e40 <qt_meta_data_QCoreApplication>,
static_metacall = 0x7fb8b5c106e8 <QCoreApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>,
relatedMetaObjects = 0x0, extradata = 0x0}}, static self = 0x7fffcc402d50}, static staticMetaObject = {d = {
---Type <return> to continue, or q <return> to quit---
superdata = 0x7fb8b60074e0 <QCoreApplication::staticMetaObject>,
stringdata = 0x7fb8b6425be0 <qt_meta_stringdata_QGuiApplication>,
data = 0x7fb8b6425f60 <qt_meta_data_QGuiApplication>,
static_metacall = 0x7fb8b60f8da0 <QGuiApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>,
relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {
superdata = 0x7fb8b6738720 <QGuiApplication::staticMetaObject>,
stringdata = 0x7fb8b7087f40 <qt_meta_stringdata_QApplication>, data = 0x7fb8b7088260 <qt_meta_data_QApplication>,
static_metacall = 0x7fb8b6c23394 <QApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>,
relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {
superdata = 0x7fb8b744c180 <QApplication::staticMetaObject>,
stringdata = 0x4129e0 <qt_meta_stringdata_SharedTools__QtSingleApplication>,
data = 0x412b60 <qt_meta_data_SharedTools__QtSingleApplication>,
static_metacall = 0x410d48 <SharedTools::QtSingleApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, firstPeer = 0x20e86c0, pidPeer = 0x20e9560, actWin = 0x0, appId = {
static null = {<No data fields>}, d = 0x209b9c0}}
pluginManager = {<QObject> = {_vptr.QObject = 0x7fb8b76c34f0 <vtable for ExtensionSystem::PluginManager+16>,
static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x7fb8b5cc0c80 <qt_meta_stringdata_QObject>,
data = 0x7fb8b5cc0da0 <qt_meta_data_QObject>,
static_metacall = 0x7fb8b5b883da <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>,
relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x20ea1c0}, static staticQtMetaObject = {d = {
superdata = 0x0, stringdata = 0x7fb8b5d0d660 <qt_meta_stringdata_Qt>, data = 0x7fb8b5d16ea0 <qt_meta_data_Qt>,
static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {
superdata = 0x7fb8b6003f60 <QObject::staticMetaObject>,
stringdata = 0x7fb8b74b3a00 <qt_meta_stringdata_ExtensionSystem__PluginManager>,
data = 0x7fb8b74b3bc0 <qt_meta_data_ExtensionSystem__PluginManager>,
static_metacall = 0x7fb8b74afda8 <ExtensionSystem::PluginManager::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d = 0x20edde0, static m_instance = 0x7fffcc402d30, m_lock = {d = 0x20ea3d0}}
overrideLanguage = {static null = {<No data fields>}, d = 0x7fb8b5c19580 <QArrayData::shared_null>}
pluginPaths = {<QList<QString>> = {{p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0,
array = {0x0}}, d = 0x20ef1c0}, d = 0x20ef1c0}}, <No data fields>}
(gdb)
| For Gerrit Dashboard: QTCREATORBUG-9096 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 53430,1 | make Qt4ProFileNode::buildDir() return normalized paths | 2.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |