make Qt4ProFileNode::buildDir() return normalized paths

QDir::absoluteFilePath(QString()) apparently appends a trailing slash

Task-number: QTCREATORBUG-9096
Change-Id: I7c816590daa87df4b646e5cee75566c97b839b52
Reviewed-by: Daniel Teske <daniel.teske@digia.com>